--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "/",
-    "token": "NTI3MzIzMjkyMjg2MDU4NTA4.DwSD-w.MBtpk-Qw96Qi447pVttU_mLvX50"
+    "token": "Insert Bot Token!"
 }
